Add testing suite

--- a/test/pkg/dvh.html
+++ b/test/pkg/dvh.html
@@ -1,16 +1,16 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Primer Browser Test</title>
+    <title>Primer Dynamic Viewport Test</title>
 
-    <link rel="stylesheet" href="../primer.css" />
-    <link rel="stylesheet" href="browser-test.css" />
-    <link rel="stylesheet" href="browser-test-dvh.css" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="dvh.css" />
   </head>
   <body>
-    <div class="container">
+    <main>
       <div>
         <h1>Primer Dyanmic Viewport Height Test</h1>
       </div>
@@ -33,6 +33,6 @@
           vertical scroll when viewed on a sufficiently tall display.
         </p>
       </div>
-    </div>
+    </main>
   </body>
 </html>
