--- a/test/pkg/index.html
+++ b/test/pkg/index.html
@@ -1,21 +1,20 @@
+<!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Primer Browser Test</title>
+    <title>Primer Test</title>
 
-    <link rel="stylesheet" href="../primer.css" />
-    <link rel="stylesheet" href="browser-test.css" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main>
       <h1>Primer Browser Test</h1>
 
       <p>
-        This page is for verifying that Primer styles are being applied
-        correctly in the browser. The only additional style applied is limiting
-        the width of this content. Image from
+        This page is for verifying that the Primer package is installable and
+        that styles are being applied correctly. Image from
         <a href="https://placekitten.com" target="_blank" rel="noopener"
           >placekitten</a
         >.
